--- a/_config.yml
+++ b/_config.yml
@@ -43,9 +43,11 @@ excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of 
 
 titlecase: true       # Converts page and post titles to titlecase
 
+gravatar_email: joseph.leo3@gmail.com
+
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/nav.html, asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [custom/asides/gravatar.html, asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -97,3 +99,6 @@ google_analytics_tracking_id:
 
 # Facebook Like
 facebook_like: true
+
+# LinkedIn
+linkedin_user: jleo3
